src/styles/global.css
/* ... */
.c-link-card__header {
  background-color: var(--scheme-base);
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
  position: relative;
}

.c-link-card__content,
.c-link-card__media {
  grid-column: 1/1;
  grid-row: 1/1;
  position: relative;
}

.c-link-card__content {
  display: grid;
  z-index: 10;
}

.c-link-card__label {
  align-self: start;
  grid-column: 1/3;
  grid-row: 1;
  justify-self: end;
  place-self: start end;
}

.c-link-card__title {
  align-self: end;
  color: var(--card-link-title-color, var(--card-link-default-title-color));
  font-weight: 700;
  grid-column: 1;
  grid-row: 2;
  width: 100%;
}

.c-link-card__button {
  align-self: end;
  grid-column: 2;
  grid-row: 2;
  justify-self: end;
  place-self: end;
}

.c-link-card__button:before {
  bottom: 0;
  content: "";
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;
}

.c-link-card__media {
  aspect-ratio: 5/4;
  overflow: hidden;
  position: relative;
}

.c-link-card__media .c-picture__image {
  -webkit-transition: scale 0.3s ease-in-out;
  transition: scale 0.3s ease-in-out;
}

.c-link-card__text {
  color: var(--scheme-text);
  margin-top: var(--space-6);
}

.c-link-card__graphic {
  background-color: var(--scheme-base);
}

.c-link-card__graphic-asset {
  opacity: 0.3;
  position: absolute;
  top: -30%;
  -webkit-transition: scale 0.3s ease-in-out;
  transition: scale 0.3s ease-in-out;
  width: 100%;
}

.c-link-card--vertical .c-link-card__media {
  border-radius: 1.5rem;
  -webkit-mask-image: url(/assets/card-mask.svg);
  mask-image: url(/assets/card-mask.svg);
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-size: contain;
  mask-size: contain;
}

.c-link-card--vertical .c-link-card__label {
  margin: var(--space-4);
}

.c-link-card--vertical .c-link-card__title {
  padding: var(--space-6);
}

.c-link-card--horizontal {
  container-type: inline-size;
}

.c-link-card--horizontal .c-link-card__media {
  border-radius: 1.25rem;
}

@container (width >= 48em){

  .c-link-card--horizontal .c-link-card__media {
    aspect-ratio: 16/9;
  }

}

.c-link-card--horizontal .c-link-card__content {
  padding: var(--space-8);
}

.c-link-card--media {
  --card-link-default-title-color: hsl(var(--color-neutral-0)/1);
}

.c-link-card:hover .c-link-card__media .c-link-card__graphic-asset,
.c-link-card:hover .c-link-card__media .c-picture__image {
  scale: 1.1;
}

.c-cookie-placeholder {
  --c-cookie-placeholder-default-background-color: var(--scheme-base);
  --c-cookie-placeholder-default-color: var(--scheme-contrast);
  bottom: 0;
  display: flex;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 40;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-6);
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  background-color: var(--c-cookie-placeholder-default-background-color);
  height: 100%;
  justify-content: center;
  padding: var(--space-8);
  text-align: center;
  width: 100%;
}

.c-cookie-placeholder__text,
.c-cookie-placholder__link {
  color: var(--c-cookie-placeholder-default-color);
}

.c-logo__image {
  height: 100%;
  max-height: var(--space-17);
  width: 100%;
}

.c-skip-link {
  --skip-link-default-transform: -100%;
  left: 0;
  position: absolute;
  top: var(--space-4);
  -webkit-transform: translateX(var(--skip-link-default-transform));
  transform: translate(var(--skip-link-default-transform));
  width: auto;
  z-index: 99999;
}

.c-skip-link:focus {
  --skip-link-default-transform: var(--space-2);
}

.c-numbers {
  --numbers-grid-columns: 1fr;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  color: var(--scheme-contrast);
  gap: var(--space-8);
  justify-content: space-between;
  overflow: hidden;
}

.c-numbers__item {
  width: auto;
}

.c-numbers__number-wrapper {
  font-family: var(--font-family-primary);
  font-size: 2rem;
  font-weight: 700;
  line-height: 1.1;
  display: inline-flex;
  -ms-flex-item-align: center;
  align-self: center;
}

.c-numbers__description {
  margin-top: var(--space-4);
}

.c-usp-card {
  --usp-card-icon-default-height: var(--space-12);
  --usp-card-icon-default-width: var(--space-12);
  display: flex;
  gap: var(--space-6);
}

.c-usp-card__icon {
  --usp-card-icon-default-bg: var(--scheme-icon-background);
  --usp-card-icon-default-color: var(--scheme-base);
  -ms-flex-negative: 0;
  background-color: var(--usp-card-icon-bg, var(--usp-card-icon-default-bg));
  border-radius: 0.375rem;
  color: var(--usp-card-icon-default-color, var(--usp-card-icon-color));
  flex-shrink: 0;
  height: var(--usp-card-icon-height, var(--usp-card-icon-default-height));
  padding: var(--space-2);
  width: var(--usp-card-icon-width, var(--usp-card-icon-default-width));
}

.c-usp-card__text {
  margin-top: var(--space-4);
}

.c-cta-card {
  --cta-card-default-bg: hsl(var(--color-smoke-90)/1);
  --cta-card-default-icon-color: hsl(var(--color-neutral-60)/1);
  --title-color: hsl(var(--color-darkgrey-20)/1);
  --subtitle-color: hsl(var(--color-purple-50)/1);
  --text-color: hsl(var(--color-neutral-0)/1);
  --price-label-color: hsl(var(--color-mediumgrey-20)/1);
  --footer-text-color: hsl(var(--color-neutral-0)/1);
  --footer-list-item-icon-color: hsl(var(--color-purple-50)/1);
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  background: var(--cta-card-bg, var(--cta-card-default-bg));
  border-radius: 1.25rem;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-6);
  padding: var(--space-8);
}

.c-cta-card__icon {
  --icon-width: var(--space-6);
  --icon-height: var(--space-6);
  margin-bottom: var(--space-20);
  opacity: 0.3;
}

.c-cta-card__icon-image {
  height: auto;
  width: var(--space-25);
}
/* ... */

